--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -21,6 +21,7 @@
     margin: 0 -10px;
     margin-top: 50px;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 @media screen and (max-width: 768px) {
